Page MenuHome GnuPG

Kleopatra: Smartcard action buttons in case of p15 cards are sometimes not responsive
Closed, ResolvedPublic

Description

I've now seen several times in the smart card view when using a p15 card that the action button(s) got no blue frame when hovering over it and clicking on it did not open the certificate details window.

Re-inserting the same card did usually solve this (if the card was shown at all, but that is an other issue).

Details

Version
Gpg4win-Beta-75++

Event Timeline

ebo created this task.
ikloecker added a subscriber: ikloecker.

Fixed.

Should probably be backported for VSD 3.3 because very likely this happens always when a new PKCS#15 card (with unknown certificates) is inserted. Workaround: Close and re-open the smart card window.

ikloecker changed the task status from Open to Testing.Nov 21 2024, 3:55 PM
ikloecker claimed this task.
ikloecker moved this task from Backlog to WIP on the gpd5x board.
ebo moved this task from Backlog to WiP on the vsd33 board.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo removed projects: vsd33, Restricted Project.Nov 26 2024, 11:44 AM

Gpg4win-Beta-94: does not work here, but as the workaround still works, we have no regression. So I remove the vsd33 + gpgcom tag

I tried to reproduce this with Gpg4win 4.4.0, but it worked for all PKCS#15 cards I tried (dark blue R&S, Genua, ipt.fraunhofer). As soon as the certificates were imported from the card (and a "Do you trust this root certificate" dialog was canceled) the buttons became enabled.

My guess is that importing the certificates from the card failed (e.g. because of T7379: Kleopatra: Learning certificates of Signature v2.0 card fails if a Yubikey is plugged in as well). Otherwise, I need logs.

ebo edited projects, added vsd33, Restricted Project; removed gpd5x.Dec 3 2024, 9:58 AM

I think you are right, it is fixed. I tried it now again with Gpg4win 4.4 with several cards and it works as you describe.

I believe with the test version I used last, other (hangup) issues did cause a delay of the "Do you trust this root certificate" dialog until the background processes where restarted. And as long as the dialog did not come up, the button was inactive.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Dec 3 2024, 9:58 AM
ebo moved this task from QA to vsd-3.3.0 on the vsd33 board.
ebo edited projects, added vsd33 (vsd-3.3.0); removed vsd33.

VSD 3.3.0: The buttons work as soon as the certificates are imported. (Depending on the card this will take some time)